Athena_Widget/Package/Xm/xmxm.pas


function XmSetColorCalculation(proc:TXmColorProc):TXmColorProc;cdecl;external libXm;
function XmGetColorCalculation:TXmColorProc;cdecl;external libXm;
procedure XmGetColors(screen:PScreen; color_map:TColormap; background:TPixel; foreground_ret:PPixel; top_shadow_ret:PPixel; 
            bottom_shadow_ret:PPixel; select_ret:PPixel);cdecl;external libXm;
procedure XmChangeColor(widget:TWidget; background:TPixel);cdecl;external libXm;
{*******    End Public Function Declarations    ******* }
{*******    Public Function Declarations for XmString.c    ******* }
function XmStringCreate(text:Pchar; charset:TXmStringCharSet):TXmString;cdecl;external libXm;
function XmStringCreateSimple(text:Pchar):TXmString;cdecl;external libXm;
function XmStringCreateLocalized(text:TString):TXmString;cdecl;external libXm;
{#if NeedWidePrototypes }
{                        int direction) ; }
{#else }
function XmStringDirectionCreate(direction:TXmStringDirection):TXmString;cdecl;external libXm;
{#endif /* NeedWidePrototypes */ }
function XmStringSeparatorCreate:TXmString;cdecl;external libXm;
{#if NeedWidePrototypes }
{                        int direction, }
{                        int separator) ; }
{#else }
function XmStringSegmentCreate(text:Pchar; charset:TXmStringCharSet; direction:TXmStringDirection; separator:TBoolean):TXmString;cdecl;external libXm;
{#endif /* NeedWidePrototypes */ }
function XmStringLtoRCreate(text:Pchar; charset:TXmStringCharSet):TXmString;cdecl;external libXm;
function XmStringCreateLtoR(text:Pchar; charset:TXmStringCharSet):TXmString;cdecl;external libXm;
function XmStringInitContext(context:PXmStringContext; _string:TXmString):TBoolean;cdecl;external libXm;
procedure XmStringFreeContext(context:TXmStringContext);cdecl;external libXm;
function XmStringGetNextComponent(context:TXmStringContext; text:PPchar; charset:PXmStringCharSet; direction:PXmStringDirection; unknown_tag:PXmStringComponentType; 
           unknown_length:Pword; unknown_value:PPbyte):TXmStringComponentType;cdecl;external libXm;
function XmStringPeekNextComponent(context:TXmStringContext):TXmStringComponentType;cdecl;external libXm;
function XmStringGetNextSegment(context:TXmStringContext; text:PPchar; charset:PXmStringCharSet; direction:PXmStringDirection; separator:PBoolean):TBoolean;cdecl;external libXm;
function XmStringGetLtoR(_string:TXmString; charset:TXmStringCharSet; text:PPchar):TBoolean;cdecl;external libXm;
function XmFontListEntryCreate(tag:Pchar; _type:TXmFontType; font:TXtPointer):TXmFontListEntry;cdecl;external libXm;
function XmFontListEntryCreate_r(tag:Pchar; _type:TXmFontType; font:TXtPointer; wid:TWidget):TXmFontListEntry;cdecl;external libXm;
procedure XmFontListEntryFree(entry:PXmFontListEntry);cdecl;external libXm;
function XmFontListEntryGetFont(entry:TXmFontListEntry; typeReturn:PXmFontType):TXtPointer;cdecl;external libXm;
function XmFontListEntryGetTag(entry:TXmFontListEntry):Pchar;cdecl;external libXm;
function XmFontListAppendEntry(old:TXmFontList; entry:TXmFontListEntry):TXmFontList;cdecl;external libXm;
function XmFontListNextEntry(context:TXmFontContext):TXmFontListEntry;cdecl;external libXm;
function XmFontListRemoveEntry(old:TXmFontList; entry:TXmFontListEntry):TXmFontList;cdecl;external libXm;
function XmFontListEntryLoad(display:PDisplay; fontName:Pchar; _type:TXmFontType; tag:Pchar):TXmFontListEntry;cdecl;external libXm;
function XmFontListCreate(font:PXFontStruct; charset:TXmStringCharSet):TXmFontList;cdecl;external libXm;
function XmFontListCreate_r(font:PXFontStruct; charset:TXmStringCharSet; wid:TWidget):TXmFontList;cdecl;external libXm;
function XmStringCreateFontList(font:PXFontStruct; charset:TXmStringCharSet):TXmFontList;cdecl;external libXm;
function XmStringCreateFontList_r(font:PXFontStruct; charset:TXmStringCharSet; wid:TWidget):TXmFontList;cdecl;external libXm;
procedure XmFontListFree(fontlist:TXmFontList);cdecl;external libXm;
function XmFontListAdd(old:TXmFontList; font:PXFontStruct; charset:TXmStringCharSet):TXmFontList;cdecl;external libXm;
function XmFontListCopy(fontlist:TXmFontList):TXmFontList;cdecl;external libXm;
function XmFontListInitFontContext(context:PXmFontContext; fontlist:TXmFontList):TBoolean;cdecl;external libXm;
function XmFontListGetNextFont(context:TXmFontContext; charset:PXmStringCharSet; font:PPXFontStruct):TBoolean;cdecl;external libXm;
procedure XmFontListFreeFontContext(context:TXmFontContext);cdecl;external libXm;
function XmStringConcat(a:TXmString; b:TXmString):TXmString;cdecl;external libXm;
function XmStringConcatAndFree(a:TXmString; b:TXmString):TXmString;cdecl;external libXm;
function XmStringNConcat(first:TXmString; second:TXmString; n:LongInt):TXmString;cdecl;external libXm;
function XmStringCopy(_string:TXmString):TXmString;cdecl;external libXm;
function XmStringNCopy(str:TXmString; n:LongInt):TXmString;cdecl;external libXm;
function XmStringByteCompare(a1:TXmString; b1:TXmString):TBoolean;cdecl;external libXm;
function XmStringCompare(a:TXmString; b:TXmString):TBoolean;cdecl;external libXm;
function XmStringLength(_string:TXmString):LongInt;cdecl;external libXm;
function XmStringEmpty(_string:TXmString):TBoolean;cdecl;external libXm;
function XmStringIsVoid(_string:TXmString):TBoolean;cdecl;external libXm;
function XmStringHasSubstring(_string:TXmString; substring:TXmString):TBoolean;cdecl;external libXm;
procedure XmStringFree(_string:TXmString);cdecl;external libXm;
function XmStringBaseline(fontlist:TXmFontList; _string:TXmString):TDimension;cdecl;external libXm;
function XmStringWidth(fontlist:TXmFontList; _string:TXmString):TDimension;cdecl;external libXm;
function XmStringHeight(fontlist:TXmFontList; _string:TXmString):TDimension;cdecl;external libXm;
procedure XmStringExtent(fontlist:TXmFontList; _string:TXmString; width:PDimension; height:PDimension);cdecl;external libXm;
function XmStringLineCount(_string:TXmString):LongInt;cdecl;external libXm;
{ NeedWidePrototypes  }

procedure XmStringDraw(d:PDisplay; w:TWindow; fontlist:TXmFontList; _string:TXmString; gc:TGC; 
            x:LongInt; y:LongInt; width:LongInt; align:dword; lay_dir:dword; 
            x2:TPosition; y2:TPosition; width2:TDimension; align2:byte; lay_dir2:byte; 
            clip:PXRectangle);cdecl;external libXm;
{ NeedWidePrototypes  }

procedure XmStringDrawImage(d:PDisplay; w:TWindow; fontlist:TXmFontList; _string:TXmString; gc:TGC; 
            x:LongInt; y:LongInt; width:LongInt; align:dword; lay_dir:dword; 
            x2:TPosition; y2:TPosition; width2:TDimension; align2:byte; lay_dir2:byte; 
            clip:PXRectangle);cdecl;external libXm;
{ NeedWidePrototypes  }
